# andy

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
content/: code-examples.md  hello-world.md  test-archive.md  test-post.md
src/: main.rs
src/models/: blog_post.rs  mod.rs
src/routes/: about.rs  blog.rs  home.rs  mod.rs
static/css/: style.css
static/js/: main.js
templates/: about.hbs  index.hbs
templates/blog/: archive.hbs  index.hbs  post.hbs
templates/layouts/: main.hbs
tests/: about.rs  blog.rs  home.rs  integration.rs
